<resources>
    <string name="app_name">PGGuardKiKi</string>

    <string name="login_head">琪琪</string>
    <string name="login_phone">请输入手机号码</string>
    <string name="login_phoneempty">手机号码不能为空！</string>
    <string name="login_passwd">请输入密码</string>
    <string name="login_passwdempty">密码不能为空！</string>
    <string name="login_login">登陆</string>
    <string name="login_register">新用户注册</string>
    <string name="login_forgetpassword">忘记密码？</string>


    <string name="register_verifyphonenumber">验证手机号码</string>
    <string name="register_phonenotice">中国    +86</string>
    <string name="register_phone">请输入手机号码</string>
    <string name="register_next">下一步</string>
    <string name="register_getverifynumber">正在获取验证码</string>

    <string name="register_inputverifyphonenumber">请填写验证码</string>
    <string name="register_inputverifyphonenumbertitle">填写验证码</string>
    <string name="register_inputverifyphonenumbernotice">验证码</string>
    <string name="register_password">请输入密码</string>
    <string name="register_passwordconfirm">请确认密码</string>
    <string name="register_newpassword">请输入新密码</string>
    <string name="register_newpasswordconfirm">请确认新密码</string>
    <string name="register_passwordnotice">用户密码</string>
    <string name="register_passwordconfirmnotice">密码确认</string>
    <string name="register_register">注册</string>
    <string name="register_registernew">确认</string>

    <string name="main_titletext">联系人</string>
    <string name="main_message">消息</string>
    <string name="main_contacts">联系人</string>
    <string name="main_dynamic">动态</string>

    <string name="contacts_group">分组</string>
    <string name="contacts_all">全部</string>
    <string name="constacts">联系人</string>

</resources>
