<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:imagecontrol="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ecedf1"
    >
    <com.pg.pgguardkiki.tools.view.RoundImageView
        android:id="@+id/logo"
        android:layout_marginTop="40dp"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:scaleType="centerCrop"
        android:layout_centerHorizontal="true"
        imagecontrol:border_inside_color="#fff7f2e9"
        imagecontrol:border_outside_color="#ffd5d1c8"
        imagecontrol:border_thickness="2dp"
        android:src="@mipmap/title" />

    <RelativeLayout
        android:id="@+id/phonerelativelayout"
        android:layout_below="@id/logo"
        android:layout_marginTop="25dp"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="#f9fafb"
        >

        <TextView
            android:id="@+id/phoneT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/login_phone"
            android:textColor="#d3d3d3"
            />

        <EditText
            android:id="@+id/phoneET"
            android:layout_marginTop="25dp"
            android:layout_width="250dp"
            android:layout_height="33dp"
            android:maxLength="15"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:numeric="integer"
            android:background="#00000000"
            />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/passwdrelativelayout"
        android:layout_below="@id/phonerelativelayout"
        android:layout_marginTop="1dp"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="#f9fafb"
        >

        <TextView
            android:id="@+id/passwordT"
            android:layout_marginTop="21dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/login_passwd"
            android:textColor="#d3d3d3"
            />

        <EditText
            android:id="@+id/passwordET"
            android:maxLength="12"
            android:layout_marginTop="14dp"
            android:layout_width="250dp"
            android:layout_height="33dp"
            android:background="#00000000"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:inputType="textPassword"
            />

    </RelativeLayout>

        <Button
            android:id="@+id/loginBt"
            android:layout_below="@id/passwdrelativelayout"
            android:layout_alignRight="@id/passwdrelativelayout"
            android:layout_alignLeft="@id/passwdrelativelayout"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_width="100dp"
            android:layout_height="45sp"
            android:text="@string/login_login"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:background="@drawable/login_button"
            />

    <TextView
        android:id="@+id/forgetTV"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_forgetpassword"
        android:textColor="#20aee2"
        />

    <TextView
        android:id="@+id/registerTV"
        android:gravity="right"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_register"
        android:textColor="#20aee2"
        />

</RelativeLayout>
