<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="#f7f7f9">

	<RelativeLayout
		android:id="@+id/registerverifynumberRL"
		android:layout_height="fill_parent"
		android:layout_width="fill_parent"
		>
		<RelativeLayout
			android:id="@+id/registerverifytitleRL"
			android:layout_width="fill_parent"
			android:layout_height="50dp"
			android:orientation="vertical"
			android:background="#12b7f5"
			>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:text="@string/register_inputverifyphonenumbertitle"
				android:layout_centerVertical="true"
				android:layout_centerHorizontal="true"
				android:gravity="center"
				android:textSize="20sp"
				android:textColor="#ffffff"
				/>
		</RelativeLayout>

		<RelativeLayout
			android:id="@+id/registerverifynumberinputRL"
			android:layout_below="@id/registerverifytitleRL"
			android:layout_marginTop="50dp"
			android:layout_width="fill_parent"
			android:layout_height="45dp"
			android:textColor="#ffffff"
			>

			<RelativeLayout
				android:id="@+id/registerverifynumbertextRL"
				android:layout_marginLeft="2dp"
				android:layout_centerVertical="true"
				android:layout_width="110dp"
				android:layout_height="45dp"
				android:background="#ffffff"
				>
				<TextView
					android:id="@+id/registerphonenoticeTV"
					android:gravity="center"
					android:layout_width="wrap_content"
					android:layout_height="33dp"
					android:textSize="18sp"
					android:layout_centerInParent="true"
					android:text="@string/register_inputverifyphonenumbernotice"
					android:textColor="#007aff"
					/>
			</RelativeLayout>

			<RelativeLayout
				android:id="@+id/registerverifyinputnumberRL"
				android:layout_toRightOf="@id/registerverifynumbertextRL"
				android:layout_marginLeft="2dp"
				android:layout_centerVertical="true"
				android:layout_width="fill_parent"
				android:layout_height="45dp"
				android:background="#ffffff"
				>
				<TextView
					android:id="@+id/registerverifynumberT"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="20dp"
					android:layout_alignParentLeft="true"
					android:layout_centerVertical="true"
					android:text="@string/register_inputverifyphonenumber"
					android:textColor="#d3d3d3"
					/>

				<EditText
					android:id="@+id/registerverifynumberET"
					android:layout_marginTop="25dp"
					android:layout_width="250dp"
					android:layout_height="33dp"
					android:maxLength="15"
					android:gravity="left"
					android:layout_marginLeft="20dp"
					android:layout_alignParentLeft="true"
					android:layout_centerVertical="true"
					android:numeric="integer"
					android:background="#00000000"
					/>
			</RelativeLayout>
		</RelativeLayout>

		<RelativeLayout
			android:id="@+id/registerpasswordRL"
			android:layout_below="@id/registerverifynumberinputRL"
			android:layout_marginTop="20dp"
			android:layout_width="fill_parent"
			android:layout_height="45dp"
			android:textColor="#ffffff"
			>

			<RelativeLayout
				android:id="@+id/registerpasswordtextRL"
				android:layout_marginLeft="2dp"
				android:layout_centerVertical="true"
				android:layout_width="110dp"
				android:layout_height="45dp"
				android:background="#ffffff"
				>
				<TextView
					android:id="@+id/registerpasswordnoticeTV"
					android:gravity="center"
					android:layout_width="wrap_content"
					android:layout_height="33dp"
					android:textSize="18sp"
					android:layout_centerInParent="true"
					android:text="@string/register_passwordnotice"
					android:textColor="#007aff"
					/>
			</RelativeLayout>

			<RelativeLayout
				android:id="@+id/registerpasswordinputRL"
				android:layout_toRightOf="@id/registerpasswordtextRL"
				android:layout_marginLeft="2dp"
				android:layout_centerVertical="true"
				android:layout_width="fill_parent"
				android:layout_height="45dp"
				android:background="#ffffff"
				>
				<TextView
					android:id="@+id/registerpasswordT"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="20dp"
					android:layout_alignParentLeft="true"
					android:layout_centerVertical="true"
					android:text="@string/register_password"
					android:textColor="#d3d3d3"
					/>

				<EditText
					android:id="@+id/registerpasswordET"
					android:layout_marginTop="25dp"
					android:layout_width="250dp"
					android:layout_height="33dp"
					android:maxLength="15"
					android:gravity="left"
					android:layout_marginLeft="20dp"
					android:layout_alignParentLeft="true"
					android:layout_centerVertical="true"
					android:inputType="textPassword"
					android:background="#00000000"
					/>
			</RelativeLayout>
		</RelativeLayout>

		<RelativeLayout
			android:id="@+id/registerconfirmpasswordRL"
			android:layout_below="@id/registerpasswordRL"
			android:layout_marginTop="5dp"
			android:layout_width="fill_parent"
			android:layout_height="45dp"
			android:textColor="#ffffff"
			>

			<RelativeLayout
				android:id="@+id/registerconfirmpasswordtextRL"
				android:layout_marginLeft="2dp"
				android:layout_centerVertical="true"
				android:layout_width="110dp"
				android:layout_height="45dp"
				android:background="#ffffff"
				>
				<TextView
					android:id="@+id/registerconfirmpasswordnoticeTV"
					android:gravity="center"
					android:layout_width="wrap_content"
					android:layout_height="33dp"
					android:textSize="18sp"
					android:layout_centerInParent="true"
					android:text="@string/register_passwordconfirmnotice"
					android:textColor="#007aff"
					/>
			</RelativeLayout>

			<RelativeLayout
				android:id="@+id/registerconfirmpasswordinputRL"
				android:layout_toRightOf="@id/registerconfirmpasswordtextRL"
				android:layout_marginLeft="2dp"
				android:layout_centerVertical="true"
				android:layout_width="fill_parent"
				android:layout_height="45dp"
				android:background="#ffffff"
				>
				<TextView
					android:id="@+id/registerconfirmpasswordT"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="20dp"
					android:layout_alignParentLeft="true"
					android:layout_centerVertical="true"
					android:text="@string/register_passwordconfirm"
					android:textColor="#d3d3d3"
					/>

				<EditText
					android:id="@+id/registerconfirmpasswordET"
					android:layout_marginTop="25dp"
					android:layout_width="250dp"
					android:layout_height="33dp"
					android:maxLength="15"
					android:gravity="left"
					android:layout_marginLeft="20dp"
					android:layout_alignParentLeft="true"
					android:layout_centerVertical="true"
					android:inputType="textPassword"
					android:background="#00000000"
					/>
			</RelativeLayout>
		</RelativeLayout>

		<Button
			android:id="@+id/registerverifyBt"
			android:layout_below="@id/registerconfirmpasswordRL"
			android:layout_alignRight="@id/registerconfirmpasswordRL"
			android:layout_alignLeft="@id/registerconfirmpasswordRL"
			android:layout_marginTop="25dp"
			android:layout_marginLeft="25dp"
			android:layout_marginRight="25dp"
			android:layout_width="100dp"
			android:layout_height="45sp"
			android:enabled="false"
			android:text="@string/register_register"
			android:textColor="#ffffff"
			android:textSize="20sp"
			android:background="@drawable/register_button"
			/>

	</RelativeLayout>
</RelativeLayout>